docs/0.18.1/_sources/api/gammapy.modeling.models.ExpDecayTemporalModel.rst.txt
ExpDecayTemporalModel
=====================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: ExpDecayTemporalModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~ExpDecayTemporalModel.covariance
      ~ExpDecayTemporalModel.default_parameters
      ~ExpDecayTemporalModel.parameters
      ~ExpDecayTemporalModel.t0
      ~ExpDecayTemporalModel.t_ref
      ~ExpDecayTemporalModel.tag
      ~ExpDecayTemporalModel.type

   .. rubric:: Methods Summary

   .. autosummary::

      ~ExpDecayTemporalModel.__call__
      ~ExpDecayTemporalModel.copy
      ~ExpDecayTemporalModel.create
      ~ExpDecayTemporalModel.evaluate
      ~ExpDecayTemporalModel.from_dict
      ~ExpDecayTemporalModel.from_parameters
      ~ExpDecayTemporalModel.integral
      ~ExpDecayTemporalModel.plot
      ~ExpDecayTemporalModel.time_sum
      ~ExpDecayTemporalModel.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: covariance
   .. autoattribute:: default_parameters
   .. autoattribute:: parameters
   .. autoattribute:: t0
   .. autoattribute:: t_ref
   .. autoattribute:: tag
   .. autoattribute:: type

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: evaluate
   .. automethod:: from_dict
   .. automethod:: from_parameters
   .. automethod:: integral
   .. automethod:: plot
   .. automethod:: time_sum
   .. automethod:: to_dict
