docs/1.2rc1/_sources/api/gammapy.modeling.models.ExpDecayTemporalModel.rst.txt
ExpDecayTemporalModel
=====================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: ExpDecayTemporalModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~ExpDecayTemporalModel.covariance
      ~ExpDecayTemporalModel.default_parameters
      ~ExpDecayTemporalModel.frozen
      ~ExpDecayTemporalModel.is_energy_dependent
      ~ExpDecayTemporalModel.parameters
      ~ExpDecayTemporalModel.reference_time
      ~ExpDecayTemporalModel.t0
      ~ExpDecayTemporalModel.t_ref
      ~ExpDecayTemporalModel.tag
      ~ExpDecayTemporalModel.type

   .. rubric:: Methods Summary

   .. autosummary::

      ~ExpDecayTemporalModel.__call__
      ~ExpDecayTemporalModel.copy
      ~ExpDecayTemporalModel.evaluate
      ~ExpDecayTemporalModel.freeze
      ~ExpDecayTemporalModel.from_dict
      ~ExpDecayTemporalModel.from_parameters
      ~ExpDecayTemporalModel.integral
      ~ExpDecayTemporalModel.plot
      ~ExpDecayTemporalModel.reassign
      ~ExpDecayTemporalModel.sample_time
      ~ExpDecayTemporalModel.time_sum
      ~ExpDecayTemporalModel.to_dict
      ~ExpDecayTemporalModel.unfreeze

   .. rubric:: Attributes Documentation

   .. autoattribute:: covariance
   .. autoattribute:: default_parameters
   .. autoattribute:: frozen
   .. autoattribute:: is_energy_dependent
   .. autoattribute:: parameters
   .. autoattribute:: reference_time
   .. autoattribute:: t0
   .. autoattribute:: t_ref
   .. autoattribute:: tag
   .. autoattribute:: type

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: evaluate
   .. automethod:: freeze
   .. automethod:: from_dict
   .. automethod:: from_parameters
   .. automethod:: integral
   .. automethod:: plot
   .. automethod:: reassign
   .. automethod:: sample_time
   .. automethod:: time_sum
   .. automethod:: to_dict
   .. automethod:: unfreeze
